{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 33,
  "lineage": "9a054789-e596-362d-baea-51e2aa5d14f5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-14T04:11:20.347-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/postgres-terraform-349419/global/firewalls/votr-network-http-allow",
            "log_config": [],
            "name": "votr-network-http-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network",
            "priority": 1000,
            "project": "postgres-terraform-349419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/firewalls/votr-network-http-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.votr-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.29.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-05-14T04:11:20.685-07:00",
            "id": "projects/postgres-terraform-349419/global/addresses/vort-db-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "vort-db-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network",
            "prefix_length": 16,
            "project": "postgres-terraform-349419",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/addresses/vort-db-ip-address"
          },
          "dependencies": [
            "google_compute_network.votr-network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "votr-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/postgres-terraform-349419/global/networks/votr-network",
            "mtu": 0,
            "name": "votr-network",
            "project": "postgres-terraform-349419",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-14T04:11:21.917-07:00",
            "id": "projects/postgres-terraform-349419/regions/us-central1/routers/votr-network-router",
            "name": "votr-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network",
            "project": "postgres-terraform-349419",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/regions/us-central1/routers/votr-network-router"
          },
          "dependencies": [
            "google_compute_network.votr-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "postgres-terraform-349419/us-central1/votr-network-router/votr-network-nat",
            "min_ports_per_vm": 0,
            "name": "votr-network-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "postgres-terraform-349419",
            "region": "us-central1",
            "router": "votr-network-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.votr-network",
            "google_compute_router.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "votr-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-14T04:11:20.924-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/postgres-terraform-349419/regions/us-central1/subnetworks/votr-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "votr-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "postgres-terraform-349419",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/regions/us-central1/subnetworks/votr-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.votr-network"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/regions/us-central1/instanceGroups/votr-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-05-14T04:24:29.834-07:00",
            "enable_cdn": false,
            "fingerprint": "A4a26pgnekM=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/healthChecks/votr-hc-default"
            ],
            "id": "projects/postgres-terraform-349419/global/backendServices/votr-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "votr-backend-default",
            "port_name": "http",
            "project": "postgres-terraform-349419",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/backendServices/votr-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.votr-network",
            "google_secret_manager_secret.votr-secret",
            "google_secret_manager_secret_version.votr-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.votr",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-05-14T04:24:17.489-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/postgres-terraform-349419/global/firewalls/votr-hc-0",
            "log_config": [],
            "name": "votr-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/networks/votr-network",
            "priority": 1000,
            "project": "postgres-terraform-349419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/firewalls/votr-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "votr-network-router",
              "votr-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.votr-network",
            "google_compute_router.default",
            "google_compute_subnetwork.votr-subnetwork",
            "google_secret_manager_secret.votr-secret",
            "google_secret_manager_secret_version.votr-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.votr",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.110.231.204",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-05-14T04:10:57.803-07:00",
            "id": "projects/postgres-terraform-349419/global/addresses/votr-address",
            "name": "votr-address",
            "prefix_length": 0,
            "project": "postgres-terraform-349419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/addresses/votr-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/postgres-terraform-349419/global/forwardingRules/votr",
            "ip_address": "34.110.231.204",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "votr",
            "port_range": "80",
            "project": "postgres-terraform-349419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/forwardingRules/votr",
            "target": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/targetHttpProxies/votr-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.votr-network",
            "google_secret_manager_secret.votr-secret",
            "google_secret_manager_secret_version.votr-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.votr",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-14T04:25:14.696-07:00",
            "id": "projects/postgres-terraform-349419/global/targetHttpProxies/votr-http-proxy",
            "name": "votr-http-proxy",
            "project": "postgres-terraform-349419",
            "proxy_bind": false,
            "proxy_id": 3550128302554492789,
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/targetHttpProxies/votr-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/urlMaps/votr-url-map"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.votr-network",
            "google_secret_manager_secret.votr-secret",
            "google_secret_manager_secret_version.votr-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.votr",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-14T04:25:02.616-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/backendServices/votr-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "AWoRj2IZx-A=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/postgres-terraform-349419/global/urlMaps/votr-url-map",
            "map_id": 2923297140171222881,
            "name": "votr-url-map",
            "path_matcher": [],
            "project": "postgres-terraform-349419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/postgres-terraform-349419/global/urlMaps/votr-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.votr-network",
            "google_secret_manager_secret.votr-secret",
            "google_secret_manager_secret_version.votr-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.votr",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.id",
            "random_password.mysql_root"
          ]
        }
      ]
    }
  ]
}